# EInkClock

./: .gitignore  .gitmodules  CMakeLists.txt  stm32.mak
Models/3D/: ClockAssembly.SLDASM
Models/pts526/: pts526.SLDPRT  pts526.STEP
cmake/: toolchain.cmake
ecad/Clock1/: BarrelJack_Horizontal.step.SLDASM  C_0603_1608Metric.step.SLDASM  Clock1.kicad_pcb  Clock1.kicad_prl  Clock1.kicad_pro  Clock1.kicad_sch  Clock1_Layout2.kicad_pcb  Crystal_HC49-4H_Vertical.step.SLDASM  D_SOD-123.step.SLDASM  Holder.SLDPRT  LED_1206_3216Metric.step.SLDASM  QFN-48-1EP_7x7mm_P0.5mm_EP5.6x5.6mm.step.SLDASM  SOLID-9.step.SLDPRT  epaper.kicad_sch  fp-info-cache  freerouting.dsn  power.kicad_sch  temp-freerouting.dsn
ecad/Clock1_v2/Clock1_v2/: 7Seg.kicad_sch  C_0201_0603Metric.step.SLDASM  Clock1 PCB.step.SLDPRT  Clock1_Layout2.kicad_prl  Clock1_Layout2.kicad_pro  Clock1_v2.SLDASM  Clock1_v2.csv  Clock1_v2.kicad_pcb  Clock1_v2.kicad_prl  Clock1_v2.kicad_pro  Clock1_v2.kicad_sch  (+7 more)
ecad/Clock1_v3/: Clock1_v4-all-pos.csv  Clock1_v4_bom.csv
ecad/Clock1_v4/: Clock1-all-pos.csv  Clock1_v4-bom.csv  Clock1_v4-bom_temp.csv
src/: CMakeLists.txt  ClockMain.cpp  ClockMain.h  ClockScreen.cpp  ClockScreen.h  Display.cpp  Display.h  Input.cpp  Input.h  Power.cpp  Power.h  RTC.cpp  RTC.h  SettingsScreen.cpp  SettingsScreen.h  UI.cpp  UI.h  _Display.cpp  clang-format.txt
src/_UI/: Label.cpp  Label.h  List.cpp  Screen.cpp  Widget.cpp  Widget.h
src/_UI/Core/: Core.h
src/_UI/Renderer/: RasterObject.cpp  RasterObject.h  Renderer.cpp  Renderer.h  Text.cpp  Text.h
vgdb/Clock1/: Clock1.sln
(+63 files in other folders)
